
2003/12/29 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- started working on PalmOS port (just a small start, there still is very
  much to do... well, actually more than I anticipated. However, it still
  seems possible ;-)


2003/12/28 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- renamed Christian's new "GWEN_DB_isSomething" functions to
  "GWEN_DB_IsSomething" (it is handled this way in GWEN_Error_IsOk, so we
  have to keep it uniform)
- added "process" to OS module. This allows for portably starting programs
  (as needed by the upcoming version of Libchipcard)
- added a graph to the documentation of the DB module to demonstrate the
  internal structure
- module XML: Added new flag which allows to ignore an <include> tag
- added doc/STYLE
- changed some function definition to comply to the STYLE odcument
- changed name of function GWEN_Md_Hash and GWEN_Md_UnregisterAllProviders
  to GWEN_MD_Hash and GWEN_MD_UnregisterAllProviders, according to
  my own style guid :-}
  

2003-12-28  Christian Stimming  <stimming@tuhh.de>

	* src/parser/db.h: Add foreach function for Groups, Variables, and
	Values. Added a lot of explaining comments.

	* src/parser/db.h: Add predicates for testing the type of a node.


2003/12/20 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- module XML: Added new flag which allows to always include files to the
  toplevel.


===========================================================================
MARK: released gwenhywfar-0.9.4rc1 (2003/12/20)
===========================================================================


2003/12/20 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- module XML: Added function that takes a search path (for <include> tags).
- module XML: Added new flag which allows to share toplevel tags across
  multiple files